class ProductOption():
    name: str = ""
    extra_charge: float = 0.0
    option_kind: str = ""
    max_count: int = 0
    min_count: int = 0
