"""empty message

Revision ID: 57a0ef4a0ef4
Revises: 2b7380507a71
Create Date: 2023-04-10 02:50:17.074441

"""
import sqlalchemy as sa
from alembic import op

# revision identifiers, used by Alembic.
revision = "57a0ef4a0ef4"
down_revision = "2b7380507a71"
branch_labels = None
depends_on = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "product",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("name", sa.String(length=200), nullable=False),
        sa.Column("description", sa.String(length=500), nullable=False),
        sa.Column("item_type", sa.String(length=100), nullable=False),
        sa.Column("category", sa.String(length=250), nullable=False),
        sa.Column("kal", sa.Float(), nullable=False),
        sa.Column("price_value", sa.Float(), nullable=False),
        sa.Column("rate", sa.Float(), nullable=False),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "transaction",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("transaction_date", sa.DateTime(), nullable=False),
        sa.Column("payment_type", sa.String(length=200), nullable=False),
        sa.Column("payment_status", sa.String(length=200), nullable=False),
        sa.Column("value", sa.Float(), nullable=False),
        sa.Column("transaction_reference", sa.String(length=200), nullable=False),
        sa.Column("remark", sa.String(length=500), nullable=False),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "order_receipt",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("contact_type", sa.String(length=250), nullable=False),
        sa.Column("status", sa.String(length=250), nullable=False),
        sa.Column("deliver_type", sa.String(length=250), nullable=False),
        sa.Column("customer_name", sa.String(length=500), nullable=False),
        sa.Column("customer_contact", sa.Integer(), nullable=False),
        sa.Column("customer_address", sa.String(length=500), nullable=False),
        sa.Column("staff", sa.String(length=200), nullable=False),
        sa.Column("remark", sa.String(length=500), nullable=False),
        sa.Column("order_snapshot", sa.String(length=500), nullable=False),
        sa.Column("transaction", sa.Integer(), nullable=True),
        sa.Column("value", sa.Float(), nullable=False),
        sa.ForeignKeyConstraint(
            ["transaction"],
            ["transaction.id"],
            name="fk_order_receipt_transaction_id_transaction",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "production_option",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("name", sa.String(length=200), nullable=False),
        sa.Column("description", sa.String(length=500), nullable=False),
        sa.Column("extra_charge", sa.Float(), nullable=False),
        sa.Column("option_kind", sa.String(length=200), nullable=False),
        sa.Column("max_count", sa.Integer(), nullable=True),
        sa.Column("min_count", sa.Integer(), nullable=True),
        sa.Column("kal", sa.Float(), nullable=True),
        sa.Column("_option_sets", sa.String(length=500), nullable=True),
        sa.Column("fk_options_product", sa.Integer(), nullable=True),
        sa.ForeignKeyConstraint(
            ["fk_options_product"],
            ["product.id"],
            name="fk_production_option_product_id_option_for_product",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "table_appointment",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("appointment_reference", sa.String(length=120), nullable=False),
        sa.Column("customer_name", sa.String(length=500), nullable=False),
        sa.Column("customer_contact", sa.Integer(), nullable=False),
        sa.Column("customer_address", sa.String(length=500), nullable=False),
        sa.Column("people_count", sa.Integer(), nullable=False),
        sa.Column("staff", sa.String(length=200), nullable=False),
        sa.Column("timeslot", sa.DateTime(), nullable=False),
        sa.Column("transaction", sa.Integer(), nullable=True),
        sa.ForeignKeyConstraint(
            ["transaction"],
            ["transaction.id"],
            name="fk_table_appointment_transaction_id_transaction",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.add_column(
        "dummy_model", sa.Column("updated_date", sa.DateTime(), nullable=True)
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_column("dummy_model", "updated_date")
    op.drop_table("table_appointment")
    op.drop_table("production_option")
    op.drop_table("order_receipt")
    op.drop_table("transaction")
    op.drop_table("product")
    # ### end Alembic commands ###
